# bazel-grpc-gateway-practice

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE  dbconfig.yaml.tpl  deps.bzl  go.mod  go.sum
.github/workflows/: build.yaml  lint.yaml
adapter/configuration/: BUILD.bazel  configuration.go
adapter/handler/: BUILD.bazel  bazel_grpc_gateway_practice_service_v1.go  create_user.go  echo.go  user_service_v1.go
adapter/logger/: BUILD.bazel  logger.go
adapter/repository/: BUILD.bazel  user.go
adapter/server/: BUILD.bazel  grpc.go  http.go
cmd/envoy/: BUILD.bazel  inject.go  main.go  wire_gen.go
cmd/server/: BUILD.bazel  inject.go  main.go  wire_gen.go
docker/: Dockerfile.envoy  Dockerfile.server  docker-compose.yml
domain/model/: BUILD.bazel  user.go  uuid.go
domain/repository/: BUILD.bazel  user.go
ent/: BUILD.bazel  client.go  ent.go  mutation.go  runtime.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
ent/enttest/: BUILD.bazel  enttest.go
ent/hook/: BUILD.bazel  hook.go
ent/migrate/: BUILD.bazel  schema.go
ent/predicate/: BUILD.bazel
ent/runtime/: BUILD.bazel  runtime.go
ent/schema/: BUILD.bazel  user.go
ent/user/: BUILD.bazel  user.go  where.go
infrastructure/: BUILD.bazel  rdb_connector.go
proto/bazel_grpc_gateway_practice/v1/: BUILD.bazel  api.proto
proto/types/: BUILD.bazel  user.pb.go  user.proto
proto/user/v1/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.proto
tools/: BUILD.bazel  tools.go
usecase/: BUILD.bazel  create_user.go
