load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/tools",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc_cmd_protoc_gen_go_grpc//:go_default_library",
        "@org_golang_google_protobuf//cmd/protoc-gen-go:go_default_library",
    ],
)
