load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create_user.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/model:go_default_library",
        "//domain/repository:go_default_library",
    ],
)
