load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["configuration.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/adapter/configuration",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kelseyhightower_envconfig//:go_default_library"],
)
