load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/adapter/logger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:go_default_library"],
)
