load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "grpc.go",
        "http.go",
    ],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/adapter/server",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/configuration:go_default_library",
        "//adapter/handler:go_default_library",
        "//proto/user/v1:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@com_github_philip_bui_grpc_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)
