load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//adapter/configuration:go_default_library",
        "//adapter/handler:go_default_library",
        "//adapter/logger:go_default_library",
        "//proto/bazel_grpc_gateway_practice/v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
