load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "user.go",
        "uuid.go",
    ],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/domain/model",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_xid//:go_default_library"],
)
