load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["enttest.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/ent/enttest",
    visibility = ["//visibility:public"],
    deps = [
        "//ent:go_default_library",
        "//ent/runtime:go_default_library",
        "@io_entgo_ent//dialect/sql/schema:go_default_library",
    ],
)
