load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["predicate.go"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/ent/predicate",
    visibility = ["//visibility:public"],
    deps = ["@io_entgo_ent//dialect/sql:go_default_library"],
)
