load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "user.go",
        "where.go",
    ],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/ent/user",
    visibility = ["//visibility:public"],
    deps = [
        "//ent/predicate:go_default_library",
        "@io_entgo_ent//dialect/sql:go_default_library",
    ],
)
