load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "types_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "types_go_proto",
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/proto/types",
    proto = ":types_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":types_go_proto"],
    importpath = "github.com/Pranc1ngPegasus/bazel-grpc-gateway-practice/proto/types",
    visibility = ["//visibility:public"],
)
